@@ -35,6 +35,7 @@ Verilator 5.019 devel
 * Fix trace when using SystemC with certain configurations (#4676). [Anthony Donlon]
 * Fix C++20 compilation errors (#4670).
 * Fix compilers seeing empty input due to file system races (#4708). [Flavien Solt]
+* Fix shift of > 32-bit number (#4719). [Flavien Solt]
 * Fix 0**0 with wide numbers (#4721). [Flavien Solt]
 
 
